--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "firebase": "^2.4.2",
+    "lodash": "^4.11.1",
     "material-ui": "^0.14.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
