--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alt": "^0.18.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
     "firebase": "^2.4.2",
+    "flux": "^2.1.1",
     "lodash": "^4.11.1",
     "material-ui": "^0.14.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-router": "^2.3.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.2",
